--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   google_mobile_ads: ^6.0.0
   flex_color_scheme: ^8.2.0
   shared_preferences: ^2.3.2
+  go_router: ^14.2.0
 
 dev_dependencies:
   bloc_test: ^10.0.0
